tests/ui/subscriber-outside.stderr
error: macro expansion ignores token `{` and any following
 --> src/global/mod.rs
  |
  |     ($type:expr) => {{ let _call_this_within_function = 0; }
  |                      ^
  |
 ::: tests/ui/subscriber-outside.rs:8:1
  |
8 | errore::subscriber!(MySubscriber);
  | --------------------------------- caused by the macro expansion here
  |
  = note: the usage of `subscriber!` is likely invalid in item context
